<resources>
    <string name="app_name">News</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="about_content">കുറ്റിപ്പുറം ബ്ലോക്ക് പഞ്ചായത്ത് പരിധിയിലെ എല്ലാ ഗ്രാമ പഞ്ചായത്തുകളിലെയും വാർത്തകൾ നിങ്ങൾക്കു മുന്നിൽ അവതരിപ്പിക്കുന്ന ഒരു ഓൺലൈൻ പോർട്ടലാണ് വളാഞ്ചേരി ഡോട്ട് ഇൻ (www.valanchery.in). 2012 ആഗസ്റ്റിൽ പ്രവർത്തനമാരംഭിച്ച ഈ സംരംഭം യാതൊരു വിധ പ്രചരണങ്ങളും കൂടാതെ സ്വപ്രയത്ന ഫലമായാണ് ചുരുങ്ങിയ കാലായളവിൽ ദിനം‌പ്രതി 200നു മുകളിൽ വായനക്കാരുള്ള ഒരു സൈറ്റ് ആയി വളർന്നു വരുന്നത്. ജനങ്ങൾ നേരിടുന്ന പ്രശ്നങ്ങൾ യാതൊരു സങ്കോചവും കൂടാതെ എഴുതുവാനുള്ള ആർജ്ജവം ഇനിയും ഞങ്ങളെ മുന്നോട്ട് നയിക്കുകതന്നെ ചെയ്യും എന്ന് ഞങ്ങൾ ഉറപ്പിച്ചു പറയട്ടെ.</string>
    <string name="about_phone">കൂടുതൽ വിവരങ്ങൾക്ക് വിളിക്കുക \n<a href="tel:+919526545454">+91 9526 54 54 54 </a></string>
    <string name="about_web"><a href="www.valanchery.in">www.valanchery.in</a></string>
</resources>
