<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@drawable/round_back"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="5dp"
            android:text="Valanchery News"
            android:textColor="#fff"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vlylogo" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/photo"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="15dp"
        android:text="@string/about_content"
        android:textColor="#000"
        android:textSize="15dp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_title"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autoLink="phone"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/about_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/detail_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:padding="5dp"
            android:text="@string/about_web"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>
